fixing paddings on mobile version at section skills

--- a/src/styles/Skills/skills.scss
+++ b/src/styles/Skills/skills.scss
@@ -21,9 +21,9 @@
 
     .skills-container{
         max-width: 1200px;
-        width: auto;
+        width: 90%;
         height: auto;
-        padding: 24px 16px ;
+        padding: 24px 0px;
         display: flex;
         flex-wrap: wrap;
         overflow-x: auto;
